[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network Peers Acquisition"
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_peers_acquisition"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.8"

[features]
default = []
local-discovery = []
network-contacts = ["reqwest", "tokio", "url"]

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
color-eyre = "~0.6"
libp2p = { git="https://github.com/libp2p/rust-libp2p/",  version="0.53",rev ="c74ec005fd30bfc408ccee3e7355bf91fe62afdc",  features = [] }
reqwest = { version="0.11.18", default-features=false, features = ["rustls-tls"], optional = true }
tokio = { version = "1.32.0", optional = true}
tracing = { version = "~0.1.26" }
url = { version = "2.4.0", optional = true }
